# ix

./: .gitignore  Cargo.toml  Makefile  README.md  main.go
ix/: common.go  ixStdin.go  option.go  root.go  slice.go  slice_test.go
option2/: main.go2  option.go2
src/: ix.rs  slice.rs
