[package]
name = "ix"
version = "0.1.0"
authors = ["Mike McDermott "]
license = "MIT"
keywords = ["slice", "file", "io"]
repository = "https://github.com/xkortex/ix"
documentation = "https://docs.rs/ix"
description = "A better file/pipe slicing tool"
readme = "README.md"
edition = "2018"

[package.metadata.docs.rs]
all-features = true

[dependencies]
log = "0.4"
env_logger = "0.8"

serde-lexpr = {version = "0.1", optional = true}
clap = "2"
regex = "1"
termion = "1.5"


[features]
default = []


[[bin]]
name = "ix"
path = "src/ix.rs"
